<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="@drawable/gradient_circle"
    >

    <TextView
        android:id="@+id/welcome_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_login_text_position"
        android:textSize="@dimen/dimen_login_text_size"
        />

    <ImageView
        android:id="@+id/image_login_planner"
        android:layout_width="@dimen/dimen_image_planner"
        android:layout_height="@dimen/dimen_image_planner"
        android:layout_below="@id/welcome_login"
        android:src="@drawable/planner_icon_black"
        android:contentDescription="@string/image_planner_description"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_login_planner"
        android:layout_weight="1"
        android:hint="@string/username_login_hint"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_login"
        android:layout_weight="1"
        android:hint="@string/password_login_hint"
        />

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_login"
        android:textColor="@color/white"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/dimen_login_btn_login"
        android:background="@color/pink_bg"
        />

    <Button
        android:id="@+id/btn_login_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_exit"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_login_login"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:background="@color/pink_bg"
        android:layout_marginTop="@dimen/dimen_login_btn_register"
        />

</RelativeLayout>