<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@drawable/gradient_linear"
    >

    <TextView
        android:id="@+id/welcome_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_homepage_text_position"
        android:textSize="@dimen/dimen_homepage_text_size"
        />

    <ImageView
        android:id="@+id/image_login_planner"
        android:layout_width="@dimen/dimen_image_planner"
        android:layout_height="@dimen/dimen_image_planner"
        android:layout_below="@id/welcome_homepage"
        android:src="@drawable/planner_icon_black"
        android:contentDescription="@string/image_planner_description"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        />

    <Button
        android:id="@+id/btn_homepage_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_homepage_login"
        android:textColor="@color/white"
        android:layout_below="@+id/image_login_planner"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/dimen_homepage_btn_login"
        android:background="@color/pink_bg"
        />

    <Button
        android:id="@+id/btn_first_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_homepage_register"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_homepage_login"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:background="@color/pink_bg"
        android:layout_marginTop="@dimen/dimen_homepage_btn_register"
        />

</RelativeLayout>